--- a/Level2.html
+++ b/Level2.html
@@ -10,6 +10,6 @@
 		<canvas id="map" style="z-index: 1; position: absolute; left: 10px; top: 50px;"" width="2000" height="2000"></canvas>
 		<canvas id="layer2" style="z-index: 2; position: absolute; left: 10px; top: 50px;" width="2000" height="2000"></canvas>
 		
-		<script type="text/javascript" src="Mehaklevel2.js"></script>
+		<script type="text/javascript" src="Level2.js"></script>
 	</body>
 </html>
