--- a/test.html
+++ b/test.html
@@ -7,8 +7,8 @@
 		 <script type="text/javascript" src="howler.js/src/plugins/howler.spatial.js"></script>
 	</head>
 	<body bgcolor = "lightblue">
-		<canvas id="map" style=" z-index: 1; position: absolute; left: 0px; top: 0px;" width="1200" height="1000"></canvas>
-		<canvas id="layer2" style="z-index: 2; position: absolute; left: 0px; top: 0px;" width="1200" height="1000"></canvas>
+		<canvas id="map" style=" z-index: 1; position: absolute; left:20px;top: 70px;" width=1500 height="1000"></canvas>
+		<canvas id="layer2" style="z-index: 2; position: absolute; left:20px; top: 70px;" width="1500" height="1000"></canvas>
 		
 		<script type="text/javascript" src="testgame.js"></script>
 	</body>
