Text to Speech added

--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
 		 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 		 <script language="javascript" src="howler.js/src/howler.core.js"></script>
 		 <script type="text/javascript" src="howler.js/src/plugins/howler.spatial.js"></script>
+		<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
 	</head>
 	<body bgcolor = "lightblue">
 		<canvas id="map" style=" z-index: 1; position: absolute; left:20px;top: 70px;" width=1500 height="1000"></canvas>
