--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		 <link rel="stylesheet" href="style.css">
 		 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 		 <script type="text/javascript" src="gameEngine.js"></script>
+		<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
 	</head>
 		 
 	<body>
